--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-TOKEN=your_bot_token_here
-WEBHOOK_URL=https://your-service-name.onrender.com
+TOKEN=7533758655:AAFEs4I4KC7IuyjhGERycgiMlIs98klr1pI
+WEBHOOK_URL=https://yourapp.onrender.com/webhook/7533758655:AAFEs4I4KC7IuyjhGERycgiMlIs98klr1pI
+PORT=5000
