--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 TOKEN=7533758655:AAFEs4I4KC7IuyjhGERycgiMlIs98klr1pI
-WEBHOOK_URL=https://yourapp.onrender.com/webhook/7533758655:AAFEs4I4KC7IuyjhGERycgiMlIs98klr1pI
-PORT=5000
+WEBHOOK_URL=https://yourapp.onrender.com
+PORT=10000
+
