--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 TOKEN=7533758655:AAFEs4I4KC7IuyjhGERycgiMlIs98klr1pI
-WEBHOOK_URL=https://yourapp.onrender.com
+WEBHOOK_URL=https://telegram-bot-ugui.onrender.com
 PORT=10000
 
