--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-TOKEN=7533758655:AAFEs4I4KC7IuyjhGERycgiMlIs98klr1pI
-PORT=10000
+BOT_TOKEN=7533758655:AAFEs4I4KC7IuyjhGERycgiMlIs98klr1pI
+RENDER_EXTERNAL_HOSTNAME=telegram-bot-ugui.onrender.com
+
